cap/CAP-217: apply review pass 2 fixes — validation, locking, indexes, test hygiene
- GeneratePutawayTasksRequest: add @NotBlank productId and @NotNull @Min(1) quantity fields
- PutawayGenerationServiceImpl: use request.getProductId()/getQuantity(), findByIdForUpdate in claimTask
- PutawayController + PutawayExecuteController: add @Valid to @RequestBody
- CreateReplenishmentPolicyRequest: add @AssertTrue isMinimumLessThanMaximum()
- PutawayTask: add missing @PreUpdate
- ReplenishmentServiceImpl: remove redundant fallback block in getReplenishmentTasks
- V1 migration: add status and composite (sku, dest, status) indexes on replenishment_task
- V2 migration: add source_receipt_id, status, composite indexes on putaway_task
- InventoryLedgerEventType: fix PUTAWAY javadoc
- PutawayExecuteServiceImpl: add TODO(CAP-215) on quantityAfter(0) placeholder
- PutawayGenerationServiceImplTest: fix 1-arg constructor usages and findById→findByIdForUpdate mocks
- PutawayGenerationContractBehaviorIT: add productId+quantity to all JSON request bodies
- PutawayValidationServiceImplTest: fix doThrow instances + 4-space indentation
- ReplenishmentServiceImplTest: add explicit mocks + TASK_ALREADY_QUEUED test

Closes review threads: r2846883153 r2846883363 r2846883399 r2846883442 r2846883486
r2846883525 r2847482284 r2847482340 r2847482368 r2847482388 r2847482414
r2847482444 r2847482465 r2847482485 r2847482507 r2847482526 r2847482557
r2847482585 r2847482607 r2847482631 r2847482663